// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c19:hover {
  color: #003A5A;
}

.c19:visited {
  color: #62a;
}

.c19:focus {
  outline: none;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c19:focus:not(:focus-visible) {
  box-shadow: none;
}

.c19:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c20 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c20:visited svg {
  color: #62a;
}

.c22 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c9:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c13 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.75rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c10 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14:focus {
  outline: none;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c16:hover {
  background-color: transparent;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c17:hover {
  background-color: #DBDEE1;
}

.c17[disabled],
.c17[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c21:focus {
  outline: none;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c21:hover {
  background-color: #DBDEE1;
}

.c21[disabled],
.c21[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c21:visited svg {
  color: #000000;
}

.c21 span {
  color: #000000;
  padding: 0 0 0 var(--spacing-half);
}

.c5 {
  margin-right: var(--spacing-1x);
}

<div
  aria-label=""
  class="c0 "
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="true"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c7 c8"
    data-testid="user-profile"
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c9"
    >
      <li
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c9"
    >
      <li>
        <a
          aria-disabled="false"
          class="c14"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c17"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c19 c20 c21"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c22"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c23"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserProfile Matches Snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c19:hover {
  color: #003A5A;
}

.c19:visited {
  color: #62a;
}

.c19:focus {
  outline: none;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c19:focus:not(:focus-visible) {
  box-shadow: none;
}

.c19:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c20 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c20:visited svg {
  color: #62a;
}

.c22 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c9:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c13 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.75rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c10 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14:focus {
  outline: none;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c16:hover {
  background-color: transparent;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c17:hover {
  background-color: #DBDEE1;
}

.c17[disabled],
.c17[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c21:focus {
  outline: none;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c21:hover {
  background-color: #DBDEE1;
}

.c21[disabled],
.c21[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c21:visited svg {
  color: #000000;
}

.c21 span {
  color: #000000;
  padding: 0 0 0 var(--spacing-half);
}

.c5 {
  margin-right: var(--spacing-1x);
}

<div
  aria-label=""
  class="c0 "
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c7 c8"
    data-testid="user-profile"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c9"
    >
      <li
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c9"
    >
      <li>
        <a
          aria-disabled="false"
          class="c14"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c17"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c19 c20 c21"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c22"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c23"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserProfile Matches Snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-3x);
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c3:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c7 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #62a;
}

.c18:focus {
  outline: none;
}

.c18:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c18:focus:not(:focus-visible) {
  box-shadow: none;
}

.c18:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c22 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c19 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c19:visited svg {
  color: #62a;
}

.c21 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c12 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 1rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c9 {
  color: #000000;
  display: block;
  font-size: 1rem;
  line-height: 2.5rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13:focus {
  outline: none;
}

.c13:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c13[disabled],
.c13[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15:focus {
  outline: none;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c15:hover {
  background-color: transparent;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c16:hover {
  background-color: #DBDEE1;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c20:focus {
  outline: none;
}

.c20:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c20:hover {
  background-color: #DBDEE1;
}

.c20[disabled],
.c20[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c20:visited svg {
  color: #000000;
}

.c20 span {
  color: #000000;
  padding: 0 0 0 var(--spacing-half);
}

.c1 button {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0;
}

.c5 {
  margin-right: 0;
}

<div
  aria-label=""
  class="c0 c1"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <div
    class="c6 c7"
    data-testid="user-profile"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c8"
    >
      <li
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c15"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c16"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c14"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c17"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c18 c19 c20"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c21"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c22"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c17"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserProfile Matches Snapshot (tag="nav") 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c19:hover {
  color: #003A5A;
}

.c19:visited {
  color: #62a;
}

.c19:focus {
  outline: none;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c19:focus:not(:focus-visible) {
  box-shadow: none;
}

.c19:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c20 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c20:visited svg {
  color: #62a;
}

.c22 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c9:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c13 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.75rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c10 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14:focus {
  outline: none;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c16:hover {
  background-color: transparent;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c17:hover {
  background-color: #DBDEE1;
}

.c17[disabled],
.c17[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding: 0 var(--spacing-2x);
}

.c21:focus {
  outline: none;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c21:hover {
  background-color: #DBDEE1;
}

.c21[disabled],
.c21[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c21:visited svg {
  color: #000000;
}

.c21 span {
  color: #000000;
  padding: 0 0 0 var(--spacing-half);
}

.c5 {
  margin-right: var(--spacing-1x);
}

<nav
  aria-label="User menu"
  class="c0 "
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c7 c8"
    data-testid="user-profile"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="user-label"
      class="c9"
    >
      <li
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              Test Button
            </span>
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c9"
    >
      <li>
        <a
          aria-disabled="false"
          class="c14"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option A
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option B
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option C
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c17"
          href="www.test.ca"
          tabindex="0"
          target="_blank"
        >
          <div
            class="c15"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c19 c20 c21"
          href="www.test.ca"
          target="_blank"
        >
          <span
            class="c22"
          >
            Option E
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c23"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
